tests/transpiler/x/java/while_loop.error
exit status 1
Main.java:5: error: non-static variable i cannot be referenced from a static context
        while (i < 3) {
               ^
Main.java:6: error: non-static variable i cannot be referenced from a static context
            System.out.println(i);
                               ^
Main.java:7: error: non-static variable i cannot be referenced from a static context
            i = i + 1;
            ^
Main.java:7: error: non-static variable i cannot be referenced from a static context
            i = i + 1;
                ^
4 errors
