tests/transpiler/x/java/while_loop.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 05:48:58 UTC
public class Main {
    public static void main(String[] args) {
        var i = 0;
        while (i < 3) {
    System.out.println(i);
    i = i + 1;
}
    }
}
